# cpptemplate

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
include/: somelib.h
src/: main.cpp  somelib.cpp
tests/: tests.cpp
